# proyecto_is2

./: .buildinfo  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  conf.py  deploy.bash  deploy_container.sh  deploy_full.sh  fly.toml  genindex.html  index.html  index.rst  manage.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js
.github/workflows/: auto_pytest.yml  autodocs.yml
Documentation/: dependencias.md
_modules/: index.html
_modules/modulos/: utils.html
_sources/: index.rst.txt
accounts/: forms.py  models.py  test_views.py  views.py
accounts/migrations/: 0001_initial.py
docs/source/: modules.html  modules.rst  modulos.Authorization.html  modulos.Authorization.management.commands.html  modulos.Authorization.management.commands.rst  modulos.Authorization.management.html  modulos.Authorization.management.rst  modulos.Authorization.migrations.html  modulos.Authorization.migrations.rst  modulos.Authorization.rst  modulos.Categories.html  modulos.Categories.migrations.html  modulos.Categories.migrations.rst  modulos.Categories.rst  modulos.Pagos.html  modulos.Pagos.migrations.html  modulos.Pagos.migrations.rst  modulos.Pagos.rst  modulos.Posts.buscador.html  modulos.Posts.buscador.rst  modulos.Posts.html  modulos.Posts.migrations.html  modulos.Posts.migrations.rst  modulos.Posts.rst  modulos.Reports.html  modulos.Reports.migrations.html  modulos.Reports.migrations.rst  modulos.Reports.rst  modulos.UserProfile.html  modulos.UserProfile.management.commands.html  modulos.UserProfile.management.commands.rst  modulos.UserProfile.management.html  modulos.UserProfile.management.rst  modulos.UserProfile.migrations.html  modulos.UserProfile.migrations.rst  modulos.UserProfile.rst  modulos.html  modulos.mdeditor.html  modulos.mdeditor.migrations.html  modulos.mdeditor.rst  (+1 more)
modulos/: utils.py
modulos/Authorization/: apps.py  decorators.py  forms.py  permissions.py  roles.py  signals.py  urls.py  views.py
modulos/Categories/: apps.py  decorators.py  forms.py  models.py  test_views.py  tests.py  urls.py  views.py
modulos/Pagos/: apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
modulos/Posts/: apps.py  decorators.py  disqus.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
modulos/Reports/: apps.py  forms.py  (+3 more)
myproject/: settings.py  urls.py
project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  base_for_pages.html  burguer.html  footer.html  header.html  register_base.html
(+555 files in other folders)
