[tool.poetry]
name = "project"
version = "0.1.0"
description = "Simple proof of concept for django + htmx"
authors = ["Elias Gill <eliasgill42@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.7"
django-types = "^0.19.1"
pylint = "^3.2.6"
pylint-django = "^2.5.5"
djlint = "^1.34.1"
django-compressor = "^4.5.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.djlint]
indent=2

[tool.djlint.js]
indent_size = 2
