[tool.poetry]
name = "project"
version = "0.1.0"
description = "Simple proof of concept for django + htmx"
authors = ["Elias Gill <eliasgill42@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.7"
django-types = "^0.19.1"
pylint = "^3.2.6"
pylint-django = "^2.5.5"
djlint = "^1.34.1"
django-compressor = "^4.5.1"
isort = "^5.13.2"
django-stubs = "^5.0.4"
psycopg = "^3.1.8"
sphinx = "^8.0.2"
sphinx-autodoc-typehints = "^2.2.3"
pytest = "^8.3.2"
pytest-django = "^4.8.0"
crispy-bootstrap5 = "^2024.2"
sendgrid = "^6.11.0"
django-crispy-forms = "^2.3"
black = "^24.8.0"
mistune = "^3.0.2"
asgiref = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -- linter and formatter --- 

[tool.black]
line-length = 88

[tool.djlint]
indent=4

[tool.djlint.js]
indent_size = 4

# -- testing --- 

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
python_files = "tests.py test_*.py *_tests.py"
